# opine

./: .clang-tidy  .gitignore  CMakeLists.txt  DISCUSSION.md  README.md
.github/workflows/: ci.yml
cmake/: FindGMP.cmake  FindMPFR.cmake  softfloat.cmake  testfloat.cmake
docs/design/: bits.md  catalog.md  decision-tree.md  dependencies.md  design.md  menagerie.md  problems.md  redesign.md  research.md  summaries.md  tdd.md  tutorial.md  twos-complement.md
docs/presentation/: README.md  index.html
docs/reference/: mulsf3.s
docs/reference/papers/: ieee-754-2019.md
examples/: 01_hello.cpp  02_same_code_diff_type.cpp  03_rbj_sort.cpp  04_rounding_modes.cpp  05_quantize.cpp  06_overflow.cpp  07_custom_format.cpp  08_introspection.cpp  09_rump.cpp  10_pi_bbp.cpp  11_fma_fusion.cpp  12_number_line.cpp  13_exact_decimal.cpp  14_sloppy_float.cpp  CMakeLists.txt  README.md
include/opine/: opine.hpp
include/opine/core/: add.hpp  arith_detail.hpp  bits.hpp  classify.hpp  compare.hpp  compute_format.hpp  convert.hpp  digits.hpp  div.hpp  encoding.hpp  enums.hpp  exceptions.hpp  extremes.hpp  float.hpp  fma.hpp  format.hpp  layout.hpp  mul.hpp  neg_abs.hpp  number.hpp  pack_unpack.hpp  platform.hpp  round_pack.hpp  rounding.hpp  sqrt.hpp  string.hpp  sub.hpp  type.hpp
tests/: CMakeLists.txt
tests/harness/: generic_binary_test.hpp  generic_unary_test.hpp  impl_mpfr.hpp  impl_native.hpp  impl_opine.hpp  impl_softfloat.hpp  native_ops.hpp  ops.hpp  softfloat_ops.hpp  test_harness.hpp  wide_formats.hpp
tests/oracle/: mpfr_exact.hpp  test_mpfr_exact.cpp  test_opine_add.cpp  test_opine_compare.cpp  test_opine_compute.cpp  test_opine_convert.cpp  test_opine_div.cpp  test_opine_flags.cpp  test_opine_fma.cpp  test_opine_mul.cpp  test_opine_neg_abs.cpp  test_opine_ops.cpp  test_opine_sqrt.cpp  test_opine_string.cpp  test_opine_sub.cpp  test_oracle.cpp  test_oracle_nonstd.cpp  test_oracle_rounding.cpp
tests/softfloat/: test_softfloat_smoke.cpp
tests/softfloat/issues/: README.md  extf80-noncanonical-both-paths.md  test_unnormal_bugs.cpp
tests/testfloat/: test_opine_testfloat.cpp
tests/unit/: test_digits.cpp  test_pack_unpack.cpp  test_types.cpp
